# C-Assignment-2

./: .nfs00000000060c88c900000fac  .nfs000000000647d0c300001042  .nfs000000000647d0c400001045  .nfs000000000647d0c500001048  .nfs000000000647d0c60000102c  .nfs000000000647d0c70000104c  .nfs000000000647d0c80000104a  .nfs000000000647d0c90000104e  .nfs000000000647d0ca00001050  .nfs000000000647d0cb00001052  .nfs000000000647d0cc00001054  .nfs000000000647d0cd00001056  .nfs000000000647d0ce00001058  .nfs000000000647d0cf0000105a  .nfs000000000647d0d00000105c  .nfs000000000647d0d10000105f  .nfs000000000647d0d200001062  .nfs00000000064e843400000fb0  .nfs00000000064e843500000fae  .nfs00000000064e843600000fb2  .nfs00000000064e843700000fbc  .nfs00000000064e843800000fbf  .nfs00000000064e843900000fcb  .nfs00000000064e843a00000fc9  .nfs00000000064e843b00000fde  As2  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  core.53215  core.62084  direction.h  main_noncurses.cpp  playerRoster.txt
model/: kingPiece.h  model.cpp  model.h  normalPiece.h  piece.h  player.cpp  player.h  playerType.h
nc_controller/: command.cpp  command.h  controller.cpp  controller.h
ncview/: add_player_window.cpp  add_player_window.h  game_window.cpp  game_window.h  main_menu.cpp  main_menu.h  menu.cpp  menu.h  player_selection_window.cpp  player_selection_window.h  ui.cpp  ui.h  window.cpp  window.h
